// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSS selectors should allow for color replacment 1`] = `
<div>
  <style>
     .react-outline-00001wozlx .abc{ font-size:20px; } .react-outline-00001wozlx{color:squanchy; }
  </style>
  <div
    className="react-outline-00001wozlx"
    name="div"
  />
</div>
`;

exports[`CSS selectors should allow you to select a nested element 1`] = `
<div>
  <style>
     .react-outline-00000bhtts .abc{ font-size:20px; } .react-outline-00000bhtts{color:red; }
  </style>
  <div
    className="react-outline-00000bhtts"
    name="div"
  />
</div>
`;

exports[`CSS selectors should support dynamic css prop on generated elements 1`] = `
<div>
  <style>
     .react-outline-0000qcsa5l:hover{ color:red; } .react-outline-0000qcsa5l{color:blue; }
  </style>
  <div
    className="react-outline-0000qcsa5l ro-000000031e"
    css={
      {
        ":hover": [Function],
      }
    }
    name="box"
  />
</div>
`;

exports[`CSS selectors should support media queries in CSS 1`] = `
<div>
  <style>
    .react-outline-0000aidy8i{color:black; } @media (max-width: 600px){ .react-outline-0000aidy8i{ color:red; } } 
  </style>
  <div
    className="react-outline-0000aidy8i"
    name="responsive"
  />
</div>
`;

exports[`CSS selectors should work with user defined callNames 1`] = `
<div>
  <div
    className="a react-outline-0000skxrbu"
    name="a"
  />
  <div
    className="react-outline-0000skxrbu"
    name="a"
  />
  <div
    className="b"
    name="b"
  />
  <div
    name="b"
  />
</div>
`;

exports[`In production mode should allow cross cutting style to map to only functions 1`] = `
<span
  name="foo"
  style={
    {
      "background": "gray",
      "fontSize": "20px",
    }
  }
/>
`;

exports[`In production mode should allow cross cutting style to map to only functions 2`] = `
<span
  name="bar"
  style={
    {
      "background": "black",
      "fontSize": "20px",
    }
  }
/>
`;

exports[`In production mode should be able to destructur assignments on generated element 1`] = `
<div
  name="cats"
  style={
    {
      "color": "pink",
    }
  }
/>
`;

exports[`In production mode should be able to destructur assignments on generated element 2`] = `
<div
  name="cats"
  style={
    {
      "color": "blue",
    }
  }
/>
`;

exports[`In production mode should be able to pass an value to style logic 1`] = `
<div
  name="dogs"
  style={
    {
      "color": "white",
    }
  }
/>
`;

exports[`In production mode should be able to pass an value to style logic 2`] = `
<div
  name="dogs"
  style={
    {
      "color": "black",
    }
  }
/>
`;

exports[`In production mode should be able to pass true value 1`] = `
<input
  disabled={true}
  name="input"
  style={
    {
      "background": "gray",
      "color": "red",
      "fontSize": "20px",
    }
  }
/>
`;

exports[`In production mode should generated an element with a logic fn that can take undefined 1`] = `
<span
  name="foo"
  style={
    {
      "background": "gray",
      "fontSize": "20px",
    }
  }
/>
`;
